--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,15 @@
 {% extends "base.html"}
 
-
 {% block main %}
 <p>Some Content on the About page!</p>
+<form action="/about" method="post">
+    {{ form.csrf_token() }}
+    {{ form.title }}
+    {{ form.submit }}
+</form>
+
+{% if title %}
+    <h1>{{ title }}</h1>
+{% endif %}
+
 {% endblock %}
