updating-using the database and change Tasks page

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,8 @@
 <h3>Subheader: Something something</h3>
 <hr>
 <ul>
-    <li><a href="#"></a>Home Page</li>
-    <li><a href="#"></a>About Page</li>
+    <li><a href="{{ url_for('index') }}"></Tasks</li>
+    <li><a href="{{ url_for('add') }}"></a>Add New</li>
 </ul>
 
 {% block main %}
