--- a/templates/add.html
+++ b/templates/add.html
@@ -1,8 +1,8 @@
-{% extends "base.html"}
+{% extends "base.html"%}
 
 {% block main %}
 <p>Some Content on the About page!</p>
-<form action="/about" method="post">
+<form action="{{ url_for('add') }}" method="post">
     {{ form.csrf_token() }}
     {{ form.title }}
     {{ form.submit }}
