--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,13 @@
-{% extends "base.html"}
+{% extends "base.html"%}
 
 
 {% block main %}
-<p>Some Content on the Home page!</p>
+
+<h1>Tasks</h1>
+<ul>
+    {% for task in tasks %}
+        <li>{{ task.title }} created on {{ task.date }}</li>
+    {% endfor %}
+</ul>
+
 {% endblock %}
